@@ -547,11 +547,11 @@ If save_alts is 1, this text is put between the alternatives.
 If save_alts is 2, this text is used to describe the link to each
 alternative file.
 .TP
-.B warn_surpressions = boolean_number
+.B warn_suppressions = boolean_number
 Set this to On to get warnings (on stdout) about messages that
 are not converted because of they are missing a msgid (if
 require_msgids is On) or because one of the following options
-surpressed it: deleted expires delete_msgnum filter_out
+suppressed it: deleted expires delete_msgnum filter_out
 filter_require filter_out_full_body filter_require_full_body.
 .TP
 .B unsafe_chars = "characters"
